--- a/src/RecruitMe.Web/ClientApp/components/account/setNewPassword/setNewPassword.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/setNewPassword/setNewPassword.vue.html
@@ -1,33 +1,33 @@
 ﻿<template>
-    <div>
-        <div v-if="!newPasswordSet">
-            <h2>Ustaw nowe haslo</h2>
-            <form @submit.prevent="handleSubmit">
-                <div class="form-group">
-                    <label htmlFor="newPassword">new Password</label>
-                    <input type="password" v-model="newPassword" name="newPassword" class="form-control" />
-                    <div v-show="submitted && !newPassword" class="invalid-feedback">newPassword is required</div>
-                </div>
+    <v-container fluid>
+        <card-layout v-if="!newPasswordSet">
+            <v-card-text>
+                <h2>Ustaw nowe haslo</h2>
+                <form @submit.prevent="()=>{}">
+                    <v-text-field label="Nowe hasło" v-model="newPassword" name="newPassword" type="password" :rules="notEmptyRule"></v-text-field>
+                    <v-text-field label="Potwierdź hasło" v-model="confirmPassword" name="confirmPassword" type="password" :rules="notEmptyRule"></v-text-field>
+                </form>
+            </v-card-text>
 
+            <v-card-actions>
                 <div class="form-group">
-                    <label htmlFor="confirmPassword">confirmPassword</label>
-                    <input type="password" v-model="confirmPassword" name="confirmPassword" class="form-control" />
-                    <div v-show="submitted && newPassword != confirmPassword" class="invalid-feedback">
-                        Password is doesnt match
-                    </div>
-                </div>
-
-                <div class="form-group">
-                    <button class="btn btn-primary" :disabled="fetching">Set new password</button>
-                    <div v-show="backendError"> {{backendError}} </div>
+                    <v-btn :disabled="fetching" @click="handleSubmit">Ustaw nowe hasło</v-btn>
                     <img v-show="fetching" />
                 </div>
-            </form>
-        </div>
+            </v-card-actions>
 
-        <div v-if="newPasswordSet">
-            Haslo pomyslnie zresetowane, mozesz się teraz zalogowac nowym haslem.
-        </div>
-    </div>
+        </card-layout>
+
+        <card-layout v-if="newPasswordSet">
+            <v-card-text>
+                Haslo pomyslnie zresetowane, mozesz się teraz zalogowac nowym haslem.
+            </v-card-text>
+            <v-card-actions>
+                <v-btn to="/">
+                    Strona główna
+                </v-btn>
+            </v-card-actions>
+        </card-layout>
+    </v-container>
 </template>
 <script src="./setNewPassword.ts"></script>
