--- a/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/home/home.vue.html
@@ -1,6 +1,6 @@
 <template>
     <v-container bg fill-height grid-list-md text-xs-center>
-        <v-layout row wrap align-center>
+        <v-layout row wrap>
             <v-flex>
                 <p>This is the home page of this project </p>
                 <p>Here is a picture of a cat</p>
