--- a/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.vue.html
@@ -1,16 +1,16 @@
 <template>
     <form mothod="post" @submit.prevent="doNothing">
-        <row class="col-md-12">
+        <div class="row col-md-12">
             <div class="picture-container" :style="getdisplayedImage()" @click="$refs.PicInput.click()">
                 <div class="picture-name">{{getdisplayedName()}}</div>
                 <input type="file" @change="PictureSelected" accept="image/*" style="display: none;" ref="PicInput">
                 <div class="overlay">Kliknij na zdjęcie aby załadować nowe.</div>
             </div>
-        </row>
-        <row>
-            <input class="col-md-3" type="submit" value="Zapisz zdjęcie" @click="PictureConfirmed" />
-            <input class="col-md-3" type="submit" value="Zrób zdjęcie teraz" @click="TakePhoto" />
-        </row>
+        </div>
+        <div class="row col-md-12">
+            <input class="w150px" type="submit" value="Zapisz zdjęcie" @click="PictureConfirmed" />
+            <input class="w150px" type="submit" value="Zrób zdjęcie teraz" @click="TakePhoto" />
+        </div>
     </form>
 </template>
 
