--- a/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
@@ -25,7 +25,9 @@
                                           readonly
                                           v-on="on"></v-text-field>
                         </template>
-                        <v-date-picker v-model="birthDate" no-title scrollable>
+                        <v-date-picker 
+                            locale="pl"
+                            v-model="birthDate" no-title scrollable>
                             <v-spacer></v-spacer>
                             <v-btn text color="primary" @click="menu = false">Anuluj</v-btn>
                             <v-btn text color="primary" @click="$refs.menu.save(birthDate)">OK</v-btn>
