--- a/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.css
+++ b/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.css
@@ -1,6 +1,12 @@
+
+.h288 {
+    height: 288px;
+}
+.w288 {
+    width: 288px;
+}
+
 .picture-container {
-    width: 300px;
-    height: 300px;
     position: relative !important;
     background-size: cover !important;
 }
@@ -27,6 +33,9 @@
 
 .overlay {
     visibility: hidden;
+    color: white;
+    padding: 144px 0;
+    text-align: center;
 }
 
 .picture-name {
