--- a/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/shared/pictureInput/pictureInput.vue.html
@@ -1,17 +1,20 @@
 <template>
-    <form mothod="post" @submit.prevent="doNothing">
-        <div class="row col-md-12">
-            <div class="picture-container" :style="getdisplayedImage()" @click="$refs.PicInput.click()">
+    <div>
+        <form mothod="post" @submit.prevent="doNothing">
+            <div class="h288 w288 picture-container" :style="getdisplayedImage()" @click="$refs.PicInput.click()">
                 <div class="picture-name">{{getdisplayedName()}}</div>
                 <input type="file" @change="PictureSelected" accept="image/*" style="display: none;" ref="PicInput">
-                <div class="overlay">Kliknij na zdjęcie aby załadować nowe.</div>
+                <div class="overlay">
+                    <span>Kliknij na zdjęcie aby załadować nowe.</span>
+                </div>
             </div>
+        </form>
+        <div>
+            <v-btn class="w288 " @click="PictureConfirmed">Zapisz zdjęcie</v-btn>
         </div>
-        <div class="row col-md-12">
-            <input class="w150px" type="submit" value="Zapisz zdjęcie" @click="PictureConfirmed" />
-            <input class="w150px" type="submit" value="Zrób zdjęcie teraz" @click="TakePhoto" />
-        </div>
-    </form>
+        <v-btn class="w288 " @click="TakePhoto">Zrób zdjęcie teraz</v-btn>
+
+    </div>
 </template>
 
 <script src="./PictureInput.ts"></script>
