CandidateSettings - work in progress

--- a/src/RecruitMe.MobileApp/app/_app-common.scss
+++ b/src/RecruitMe.MobileApp/app/_app-common.scss
@@ -42,3 +42,13 @@ ActionBar {
 .error-label {
    color: rgb(165, 0, 0);
 }
+
+.form-input {
+   color: white;
+   placeholder-color: white;
+   border-bottom-width: 1;
+   border-bottom-color: white;
+}
+.form-group {
+   margin-top: 15;
+}
