Added draft admin-panel manage page

--- a/src/RecruitMe.Web/ClientApp/components/account/login/login.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/login/login.vue.html
@@ -1,7 +1,7 @@
 ﻿<script src="./login.ts"></script>
 <template>
     <form @submit.prevent="()=>{}">
-        <card-layout minWidth="600px">
+        <card-layout>
 
             <v-card-text>
                 <h2>Logowanie</h2>
