--- a/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/register/register.vue.html
@@ -1,7 +1,7 @@
 ﻿<script src="./register.ts"></script>
 <template>
     <v-container fluid>
-        <card-layout v-if="!registrationCompleted" minWidth="600px">
+        <card-layout v-if="!registrationCompleted">
             <v-card-text>
                 <h2>Rejestracja</h2>
                 <form @submit.prevent="()=>{}">
