--- a/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/account/resetPassword/resetPassword.vue.html
@@ -1,6 +1,6 @@
 ﻿<template>
     <v-container fluid>
-        <card-layout v-if="!passwordResetCompleted" minWidth="344px">
+        <card-layout v-if="!passwordResetCompleted">
             <v-card-text>
                 <h2>Resetuj hasło</h2>
                 <form @submit.prevent="()=>{}">
@@ -15,7 +15,7 @@
             </v-card-text>
         </card-layout>
 
-        <card-layout v-if="passwordResetCompleted" maxWidth="344px">
+        <card-layout v-if="passwordResetCompleted">
             <v-card-text>
                 Na email podany przy rejestracji konta zostala wyslana wiadomosc z linkiem do zmiany hasla.
             </v-card-text>
