--- a/src/RecruitMe.Web/ClientApp/components/shared/CardLayout/cardLayout.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/shared/CardLayout/cardLayout.vue.html
@@ -1,9 +1,7 @@
 <template>
     <v-container bg fill-height grid-list-md text-xs-center>
         <v-row justify="center">
-            <v-card row wrap align-center 
-                    :min-width="minWidth ? minWidth : defaultMinWidth" 
-                    :max-width="maxWidth ? maxWidth : defaultMaxWidth">
+            <v-card row wrap align-center  :class="className ? className : defaultClassName">
                 <slot></slot>
             </v-card>
         </v-row>
