--- a/src/RecruitMe.Web/ClientApp/components/adminpanel/add/add.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/adminpanel/add/add.vue.html
@@ -1,34 +1,49 @@
 ﻿<template>
     <div>
-        <h2>add items: {{ currentSystemEntity }}</h2>
         <card-layout className="col-md-10">
+            <c-card-title>
+                <h3 class="d-inline-block" v-if="SystemEntityEnum.Exam==currentSystemEntity">
+                    Dodaj termin egzaminu
+                </h3>
+                <h3 class="d-inline-block" v-if="SystemEntityEnum.ExamCategory==currentSystemEntity">
+                    Dodaj kategorię egzaminu
+                </h3>
+                <h3 class="d-inline-block" v-if="SystemEntityEnum.Teacher==currentSystemEntity">
+                    Dodaj nauczyciela
+                </h3>
+                <v-btn class="ml-3"
+                       :to="'/adminPanel/manage/'+currentSystemEntity">
+                    Cofnij
+                </v-btn>
+            </c-card-title>
+
             <v-card-text>
                 <v-container v-if="SystemEntityEnum.Exam==currentSystemEntity">
                     <v-text-field label="Nazwa" v-model="exam.name" name="exam.name"></v-text-field>
                     <v-datetime-picker label="Start Egzaminu"
                                        v-model="exam.startDateTime">
                     </v-datetime-picker>
-                    <v-select v-model="exam.type"
-                              :items="examTypes"
-                              item-text="name"
-                              item-value="id"
-                              label="Typ egzaminu">
-                    </v-select>
                     <v-text-field label="Czas trwania" v-model="exam.durationInMinutes" name="exam.durationInMinutes" type="number"></v-text-field>
                     <v-select v-model="exam.examCategory" :items="examCategories" label="Kategoria egzaminu"></v-select>
                 </v-container>
 
                 <v-container v-if="SystemEntityEnum.ExamCategory==currentSystemEntity">
                     <v-text-field label="Nazwa kategorii" v-model="examCategory.name" name="examCategory.name"></v-text-field>
+                    <v-select v-model="examCategory.examType"
+                              :items="examTypes"
+                              item-text="name"
+                              item-value="id"
+                              label="Typ egzaminu">
+                    </v-select>
 
                 </v-container>
 
                 <v-container v-if="SystemEntityEnum.Teacher==currentSystemEntity">
                     <v-text-field label="Imię" v-model="teacher.name" name="teacher.name"></v-text-field>
                     <v-text-field label="Nazwisko" v-model="teacher.surname" name="teacher.surname"></v-text-field>
-
                 </v-container>
             </v-card-text>
+
             <v-card-actions>
                 <v-btn @click="handleSubmit">
                     Zapisz
