--- a/src/RecruitMe.Web/ClientApp/components/adminpanel/details/details.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/adminpanel/details/details.vue.html
@@ -1,6 +1,5 @@
 ﻿<template>
     <div>
-        <h2>details items: {{ currentSystemEntity }}</h2>
 
         <v-container v-if="SystemEntityEnum.Exam==currentSystemEntity">
             TODO
@@ -14,9 +13,27 @@
 
         <v-container v-if="SystemEntityEnum.ExamCategory==currentSystemEntity">
             <card-layout className="col-md-10">
+                <c-card-title>
+                    <h3 class="d-inline-block">
+                        Edycja kategorii egzaminu
+                    </h3>
+                    <v-btn class="ml-3"
+                           :to="'/adminPanel/manage/'+currentSystemEntity">
+                        Wróć
+                    </v-btn>
+                </c-card-title>
+
                 <v-card-text>
+                    Edytowanie lub usuwanie kategorii egzaminów w czasie rekrutacji może być niemożliwe jeśli są do niej przypięte egzaminy i kandytaci.
+                    Upewnij się przed rozpoczęciem rekrutacji, że obiekty są poprawnie przygotowane.
                     <v-text-field readonly label="Id" v-model="examCategory.id" name="examCategory.id"></v-text-field>
                     <v-text-field label="Nazwa kategorii" v-model="examCategory.name" name="examCategory.name"></v-text-field>
+                    <v-select v-model="examCategory.examType"
+                              :items="examTypes"
+                              item-text="name"
+                              item-value="id"
+                              label="Typ egzaminu">
+                    </v-select>
                 </v-card-text>
                 <v-card-actions>
                     <v-btn @click="handleDelete">
@@ -31,6 +48,16 @@
 
         <v-container v-if="SystemEntityEnum.Teacher==currentSystemEntity">
             <card-layout className="col-md-10">
+                <c-card-title>
+                    <h3 class="d-inline-block">
+                        Edycja danych nauczyciela
+                    </h3>
+                    <v-btn class="ml-3"
+                           :to="'/adminPanel/manage/'+currentSystemEntity">
+                        Wróć
+                    </v-btn>
+                </c-card-title>
+
                 <v-card-text>
                     <v-text-field readonly label="Id" v-model="teacher.id" name="teacher.id"></v-text-field>
                     <v-text-field label="Imię" v-model="teacher.name" name="teacher.name"></v-text-field>
