--- a/src/RecruitMe.Web/ClientApp/components/adminpanel/details/details.vue.html
+++ b/src/RecruitMe.Web/ClientApp/components/adminpanel/details/details.vue.html
@@ -62,7 +62,9 @@
                     <v-text-field readonly label="Id" v-model="teacher.id" name="teacher.id"></v-text-field>
                     <v-text-field label="Imię" v-model="teacher.name" name="teacher.name"></v-text-field>
                     <v-text-field label="Nazwisko" v-model="teacher.surname" name="teacher.surname"></v-text-field>
+                    <v-text-field label="Email" v-model="teacher.email" name="teacher.email"></v-text-field>
                 </v-card-text>
+
                 <v-card-actions>
                     <v-btn @click="handleDelete">
                         Usun
